--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,19 @@ img{
   margin: 0 auto;
   margin-top: 20px;
 }
+
+#audio_wrapper{
+  display: flex;
+  margin: 0 auto;
+  width: 80%;
+  justify-content: space-between;
+  margin-top: 10%;
+}
+
+#speaking{
+  display: flex;
+  margin: 0 auto;
+  width: 80%;
+  justify-content: space-between;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
